# intelligent-chat-service

./: .gitignore  README-datadog-logging.md  README.md  docker-compose.yaml  docker-compose.yml  dynamic_graph_example.yaml  fluent-bit.conf  pyproject.toml  requirements.txt  sample.yaml
base_tools/: qdrant_tool_definition.json  tool_manager.py
deployments/: docker-compose.yaml
intelligent_chat_service/: config.py  intelligent_chat_service.py  main.py
intelligent_chat_service/agents/: Dockerfile  __init__.py  agent.py  analyzer_agent.py  analyzer_service.py  clarification_agent.py  consolidator_agent.py  executor_agent.py  kafka_agent_adapter.py  planner_agent.py  planner_service.py  service_template.py  tool_executor_agent.py
intelligent_chat_service/clients/: agent_client.py  kafka_client.py
intelligent_chat_service/controller/: __init__.py  chat.py  graph_api.py  graph_controller.py  human_interaction.py  tool.py
intelligent_chat_service/core/: __init__.py  human_interaction.py
intelligent_chat_service/orchestrator/: __init__.py  graph_basic_orchestrator.py  graph_orchestrator.py  idiscovery_graph_orchestrator.py  idiscovery_orchestrator.py  orchestrator.py
intelligent_chat_service/prompts/: prompts.yaml
intelligent_chat_service/schema/: __init__.py  chat.py  graph_orchestrator.py  idiscovery_orchestrator.py  (+1 more)
postman/: README.md  intelligent_chat_service.postman_collection.json
scripts/: execute.sh  kafka_test.py
tests/: test_human_in_the_loop.py
tools/: qdrant_retrieval_tool.py
ui_test/: README.md  app.js  index.html  styles.css
(+17 files in other folders)
